--- a/public/styles.css
+++ b/public/styles.css
@@ -50,8 +50,9 @@ body {
 }
 
 nav {
-    padding: 16px 32px;
+    padding: 24px 32px;
     background: #000;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 .barra-navegacion {
@@ -69,8 +70,7 @@ nav {
 }
 
 .header {
-    height: 80px;
-    margin-bottom: 36px;
+    height: 42px;
     background: #e4e4e4;
     color: #000;
     display: flex;
@@ -85,19 +85,17 @@ nav {
     height: 22px;
 }
 
-.header a {
-    height: 24px;
-}
-
-.header h1 {
+h1 {
     text-align: center;
-    font-size: 22px;
-    margin-left: 16px;
-}
-
-.header h1 a {
-    text-decoration: none;
-    color: #fff;
+    font-size: 16px;
+    height: 42px;
+    margin-bottom: 36px;
+    background: #ffd29761;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: default;
 }
 
 .product-container {
@@ -129,6 +127,11 @@ nav {
     background: #eaeaea;
 }
 
+.product-container form input:focus,
+.product-container form input:active {
+    background: #a4a4a461;
+}
+
 .product-container form .update {
     background: #fff;
     color: #62e06f;
@@ -151,15 +154,17 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    padding: 16px 24px;
-    border-radius: 8px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    padding: 32px 24px;
+    border-radius: 4px;
 }
 
 .product-card img {
     height: 200px;
     width: 200px;
     margin-bottom: 16px;
+    border: 1px solid #c3c3c3;
+    border-radius: 4px;
 }
 
 .product-card h2 {
