--- a/public/styles.css
+++ b/public/styles.css
@@ -130,7 +130,11 @@ table {
 }
 
 /*---------*/
-
+body{
+    font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 a {
     text-decoration: none;
 }
@@ -141,8 +145,7 @@ img {
 }
 
 h2{
-    font-size: 16px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;    
     font-weight: bold;
 
     text-align: center;
@@ -152,8 +155,8 @@ h2{
     display: flex;
     justify-content: center;
     padding: 15px;
-    background-color: #000;
-    gap: 10px;
+    background-color: #062acd;
+    gap: 15px;
     margin-bottom: 15px;
 }
 
@@ -171,11 +174,14 @@ h2{
 .productCard {
     display: flex;
     flex-direction: column;
-    border: 1px solid rgb(132, 131, 131);
+    border: 1px solid rgb(178, 176, 176);
     border-radius: 10px;
     width: 300px;
     padding: 10px;
     gap: 5px;
+    -webkit-box-shadow: 6px 6px 5px 0px rgba(128,126,128,1);
+    -moz-box-shadow: 6px 6px 5px 0px rgba(128,126,128,1);
+    box-shadow: 6px 6px 5px 0px rgba(128,126,128,1);
 }
 
 .boton{
