--- a/public/styles.css
+++ b/public/styles.css
@@ -184,14 +184,7 @@ h2{
     box-shadow: 6px 6px 5px 0px rgba(128,126,128,1);
 }
 
-.boton{
-    padding: 10px;
-    background-color:#1239ff;
-    color: #fff;
-    border-radius: 10px;
-    align-self: center;
-    border: none;
-}
+
 .formContainer{
     display: flex;
     justify-content: center;
@@ -218,4 +211,20 @@ input{
 select{
     border-radius: 10px;
     padding: 5px;
+}
+.containerBoton{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.boton{
+    padding: 8px;
+    background-color:#1239ff;
+    color: #fff;
+    border-radius: 10px;
+    text-align: center;
+    border: none;
+    width: 100px;
+    
 }
