--- a/public/styles.css
+++ b/public/styles.css
@@ -130,6 +130,11 @@ table {
 }
 
 /*---------*/
+body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
 a {
     text-decoration: none;
@@ -140,11 +145,9 @@ img {
     height: 300px;
 }
 
-h2{
+h2 {
     font-size: 16px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-
     text-align: center;
 }
 
@@ -152,8 +155,8 @@ h2{
     display: flex;
     justify-content: center;
     padding: 15px;
-    background-color: #000;
-    gap: 10px;
+    background-color: #062ACD;
+    gap: 15px;
     margin-bottom: 15px;
 }
 
@@ -171,45 +174,57 @@ h2{
 .productCard {
     display: flex;
     flex-direction: column;
-    border: 1px solid rgb(132, 131, 131);
+    border: 1px solid rgb(178, 176, 176);
     border-radius: 10px;
     width: 300px;
     padding: 10px;
     gap: 5px;
+    -webkit-box-shadow: 6px 6px 5px 0px rgba(128, 126, 128, 1);
+    -moz-box-shadow: 6px 6px 5px 0px rgba(128, 126, 128, 1);
+    box-shadow: 6px 6px 5px 0px rgba(128, 126, 128, 1);
 }
 
-.boton{
-    padding: 10px;
-    background-color:#1239ff;
-    color: #fff;
-    border-radius: 10px;
-    align-self: center;
-    border: none;
-}
-.formContainer{
+.formContainer {
     display: flex;
     justify-content: center;
 }
 
-.formulario{
+.formulario {
     display: flex;
     flex-direction: column;
-    gap:5px;
+    gap: 5px;
     width: 300px;
     margin-top: 10px;
 }
 
-.formcategory{
+.formcategory {
     display: flex;
     flex-direction: column;
     font-size: 12px;
 }
-input{
+
+input {
     border-radius: 10px;
     padding: 5px;
 }
 
-select{
+select {
     border-radius: 10px;
     padding: 5px;
+}
+
+.containerBoton {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.boton {
+    padding: 8px;
+    background-color: #1239ff;
+    color: #fff;
+    border-radius: 10px;
+    text-align: center;
+    border: none;
+    width: 100px;
 }
