--- a/public/styles.css
+++ b/public/styles.css
@@ -144,7 +144,7 @@ h1 {
 }
 
 .product-container form select {
-    width: 80%;
+    width: 82%;
     padding: 8px;
     border-radius: 4px;
     border: none;
@@ -276,7 +276,7 @@ h1 {
     display: flex;
     justify-content: center;
     background-image: linear-gradient(to top, #670f6f, #b2205a, #d65f3f, #d8a237, #bde26a);
-    height: 100%;
+    height: 100vh;
 }
 
 .form-users {
@@ -298,6 +298,7 @@ h1 {
 .form-users h1 {
     text-align: center;
     font-size: 16px;
+    font-weight: bold;
     margin-bottom: 36px;
     background: #fff;
     color: #000;
@@ -326,6 +327,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    row-gap: 16px;
 }
 
 .form-users .register {
@@ -335,7 +337,6 @@ h1 {
     text-decoration: none;
     cursor: pointer;
     border-radius: 4px;
-    margin-top: 16px;
 }
 
 .form-users .passwordError,
